<resources>
    <string name="app_name">My Modules</string>
    <string name="Android">C346 Android Programming</string>
    <string name="Software">C206 Software Development Process</string>
    <string name="UI">C218 UI/UX Design For Apps</string>
    <string name="Security">C236 IT Security and Management</string>
    <string name="Portfolio">C390 Portfolio Development</string>
    <string name="PHP">C203 Web App Development in PHP</string>
    <string name="code">Module Code:</string>
    <string name="name">Module Name:</string>
    <string name="academic">Academic Year:</string>
    <string name="Semester">Module Semester:</string>
    <string name="Credit">Module Credit:</string>
    <string name="Venue">Venue:</string>

</resources>