<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:paddingLeft="30dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textViewAndroid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="50dp"
            android:paddingBottom="15dp"
            android:text="@string/Android" />

        <TextView
            android:id="@+id/textViewSoftware"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingVertical="15dp"
            android:text="@string/Software" />

        <TextView
            android:id="@+id/textViewPHP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingVertical="15dp"
            android:text="@string/PHP" />

        <TextView
            android:id="@+id/textViewUI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingVertical="15dp"
            android:text="@string/UI" />

        <TextView
            android:id="@+id/textViewSecurity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingVertical="15dp"
            android:text="@string/Security" />
        <TextView
            android:id="@+id/textViewPortfolio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingVertical="15dp"
            android:text="@string/Portfolio" />
    </LinearLayout>
</LinearLayout>